added a bit of css

--- a/runi_app_client/src/App.css
+++ b/runi_app_client/src/App.css
@@ -1,5 +1,10 @@
+html {
+  background-color: aqua;
+
+}
 .App {
   text-align: center;
+  
 }
 
 .App-logo {
@@ -21,6 +26,13 @@
 
 .App-link {
   color: #61dafb;
+}
+.container {
+  display: flex;
+  flex-direction: column;
+  background-color: aqua;
+  align-items: center;
+
 }
 
 @keyframes App-logo-spin {
